fix chat icon being cut off

--- a/client/src/plus/ai-help/history.scss
+++ b/client/src/plus/ai-help/history.scss
@@ -74,11 +74,11 @@
               background-color: var(--icon-primary);
               content: "";
               display: inline-block;
-              height: 10px;
-              margin-right: 0.5rem;
+              height: 0.6em;
+              margin-right: 0.5em;
               mask-image: url("../../assets/icons/message.svg");
-              mask-size: cover;
-              width: 10px;
+              mask-size: contain;
+              width: 0.6em;
             }
           }
 
